# Comodot

./: .gitignore  README.md
compiler/: 123  doca.txt
compiler/ast/: Cargo.toml
compiler/ast/src/: lib.rs
compiler/ast_lowering/: Cargo.toml
compiler/ast_lowering/src/: lib.rs
compiler/beautiful_ast_printer/: Cargo.toml
compiler/beautiful_ast_printer/src/: lib.rs
compiler/cli/: Cargo.toml  buildins.bc  builtins.c  include.cd  lol.ll  main.cd  test  test.ll  test.sh
compiler/cli/src/: main.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: builder.rs  lib.rs  misc.rs  name_mangler.rs
compiler/hir/: Cargo.toml
compiler/hir/src/: lib.rs
compiler/hir_resolver/: Cargo.toml
compiler/hir_resolver/src/: lib.rs
compiler/internal/buildins/: Makefile  buildins.bc  io.c
compiler/internal/runtime/: Makefile  entry.c  runtime.bc
compiler/itt/: Cargo.toml
compiler/itt/src/: lib.rs  symbol_table.rs
compiler/itt_resolver/: Cargo.toml
compiler/itt_resolver/src/: lib.rs
compiler/itt_semantic_analyzer/: Cargo.toml
compiler/itt_semantic_analyzer/src/: lib.rs
compiler/itt_symbol_misc/: Cargo.toml
compiler/itt_symbol_misc/src/: func_table.rs  lib.rs  local_env.rs  name_mangler.rs
compiler/itt_validator/: Cargo.toml
compiler/itt_validator/src/: lib.rs
compiler/lexer/: Cargo.toml
compiler/linker/: Cargo.toml
compiler/llvm_codegen/: Cargo.toml
compiler/middle/: Cargo.toml
compiler/mir/: Cargo.toml
compiler/module_builder/: Cargo.toml
compiler/module_builder/src/: lib.rs
compiler/module_codec/: Cargo.toml
compiler/parser/: Cargo.toml
compiler/pretty_logger/: Cargo.toml
compiler/test_proj/: another_in_module.cd  main.cd
compiler/tokens/: Cargo.toml
compiler/type_checker/: Cargo.toml
compiler/types_lowering/: Cargo.toml
lexer/: Cargo.toml  README.MD  test
lexer/src/: lib.rs  reserved_symbols.rs  tests.rs
(+42 files in other folders)
