[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = {path = "../ast"}
tokens = {path = "../tokens"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
mir = {path="../mir"}
itt_symbol_misc = {path = "../itt_symbol_misc"}
itt_resolver = {path = "../itt_resolver"}
itt_validator = {path = "../itt_validator"}
codegen = {path = "../codegen"}
clap = "*"